Fully working implementation!